<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/btSumar"
        android:layout_width="108dp"
        android:layout_height="51dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="140dp"
        android:hint="@string/btSumar"
        android:onClick="sumar"
        android:textColor="#E2EAED"
        android:textColorHint="#FFFFFF"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumero2" />

    <EditText
        android:id="@+id/editNumero1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="68dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editNumero1"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editNumero2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:autofillHints=""
        android:ems="10"
        android:hint="@string/editNumero2"
        android:inputType="number"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumero1" />

    <TextView
        android:id="@+id/tvResultado"
        android:layout_width="185dp"
        android:layout_height="19dp"
        android:layout_marginTop="172dp"
        android:layout_marginEnd="20dp"
        android:layout_marginRight="20dp"
        android:hint="@string/tvResultado"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editNumero2" />

    <Button
        android:id="@+id/btRestar"
        android:layout_width="108dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="28dp"
        android:hint="@string/btRestar"
        android:onClick="Restar"
        android:textColor="#FFFFFF"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/tvResultadoRestar"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btSumar" />

    <Button
        android:id="@+id/button4"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:layout_marginTop="40dp"
        android:hint="@string/btMulti"
        android:onClick="multiplicar"
        android:textColorHint="#FFFFFF"
        app:layout_constraintEnd_toStartOf="@+id/tvResultadoM"
        app:layout_constraintHorizontal_bias="0.054"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/btRestar" />

    <Button
        android:id="@+id/button5"
        android:layout_width="112dp"
        android:layout_height="50dp"
        android:layout_marginStart="60dp"
        android:layout_marginLeft="60dp"
        android:hint="@string/btDividir"
        android:onClick="dividir"
        android:textColorHint="#FFFFFF"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/tvResultadoD"
        app:layout_constraintHorizontal_bias="0.03"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/button4"
        app:layout_constraintVertical_bias="0.248" />

    <TextView
        android:id="@+id/tvResultadoRestar"
        android:layout_width="176dp"
        android:layout_height="26dp"
        android:layout_marginTop="52dp"
        android:layout_marginEnd="28dp"
        android:layout_marginRight="28dp"
        android:hint="@string/tvResultadoRestar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultado" />

    <TextView
        android:id="@+id/tvResultadoM"
        android:layout_width="187dp"
        android:layout_height="26dp"
        android:layout_marginTop="60dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:hint="@string/tvResultadoM"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadoRestar" />

    <TextView
        android:id="@+id/tvResultadoD"
        android:layout_width="196dp"
        android:layout_height="27dp"
        android:layout_marginEnd="8dp"
        android:layout_marginRight="8dp"
        android:hint="@string/tvResultadoD"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tvResultadoM"
        app:layout_constraintVertical_bias="0.384" />

</androidx.constraintlayout.widget.ConstraintLayout>